test/files/pos/t12594/Parent_1.java

public interface Parent_1 {
	void takeMany(String... values);
	<A> void takePoly(A... values);
	void takeOne(String value);
}
