test/files/neg/t12594/Parent_1.java

public interface Parent_1 {
	void takeMany(Integer... values);
}
